added MIT License, some SonarLint formatting